--- a/package.json
+++ b/package.json
@@ -3,30 +3,30 @@
   "description": "JavaScript library for the browser that provides DOM element validations",
   "version": "1.0.2",
   "license": "MIT",
-  "options": {
-    "mocha": "--require scripts/mocha_runner tests/**/*.js"
-  },
   "scripts": {
-    "start": "babel --watch --plugins \"transform-runtime\" src --out-dir ./dist",
-    "prepublish": "babel --plugins \"transform-runtime\" src --out-dir ./dist",
-    "lint": "eslint ./src",
-    "testonly": "mocha $npm_package_options_mocha",
-    "test": "npm run lint && npm run testonly",
-    "test-watch": "npm run testonly -- --watch --watch-extensions js"
+    "lint": "eslint ./src ./tests",
+    "build": "webpack --progress",
+    "test": "NODE_ENV=testing karma start --single-run",
+    "test:watch": "NODE_ENV=testing karma start"
   },
   "devDependencies": {
-    "babel-cli": "6.x.x",
     "babel-core": "6.x.x",
     "babel-eslint": "4.x.x",
-    "babel-plugin-transform-runtime": "6.x.x",
+    "babel-loader": "^7.0.0",
     "babel-polyfill": "6.x.x",
     "babel-preset-es2015": "6.x.x",
     "babel-preset-stage-2": "6.x.x",
-    "chai": "3.x.x",
+    "chai": "^4.0.2",
     "eslint": "1.7.x",
     "eslint-plugin-babel": "2.x.x",
-    "mocha": "2.x.x",
-    "nodemon": "1.7.x"
+    "karma": "^1.7.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-mocha": "^1.3.0",
+    "karma-nyan-reporter": "^0.2.5",
+    "karma-webpack": "^2.0.3",
+    "mocha": "^3.4.2",
+    "webpack": "^2.6.1"
   },
   "author": "Javier Perez",
   "bugs": {
@@ -38,7 +38,6 @@
     "url": "https://github.com/sljavi/dom-element-types.git"
   },
   "dependencies": {
-    "babel-runtime": "6.x.x",
     "lodash": "^4.17.4"
   }
 }
