--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "karma": "^1.7.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.1.1",
+    "karma-coverage": "^1.1.1",
+    "karma-coveralls": "^1.1.2",
     "karma-mocha": "^1.3.0",
     "karma-nyan-reporter": "^0.2.5",
     "karma-webpack": "^2.0.3",
