--- a/.eslintrc
+++ b/.eslintrc
@@ -36,7 +36,7 @@
 
   "rules": {
     "block-scoped-var": [0],
-    "brace-style": [2, "stroustrup", {"allowSingleLine": true}],
+    "brace-style": [0],
     "camelcase": [0],
     "comma-dangle": [0],
     "comma-spacing": [2],
