--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "karma-coverage": "^1.1.1",
     "karma-coveralls": "^1.1.2",
     "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
     "karma-nyan-reporter": "^0.2.5",
     "karma-webpack": "^2.0.3",
     "mocha": "^3.4.2",
